# fdate

./: Cargo.toml  LICENSE.txt  README.md  build_loop.sh  flake.nix
src/: main.rs
