[package]
name = "fdate"
version = "0.1.0"
edition = "2021"
license = "MIT"
url = "https://github.com/TyberiusPrime/fdate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.75", features = ["backtrace"]}
calendarize = "1.1.0"
chrono = "0.4.30"
shell-words = "1.1.0"
tuikit = "0.5.0"
